Finished About me page

--- a/about-me-buffon.html
+++ b/about-me-buffon.html
@@ -40,6 +40,29 @@
         </div>
     </nav>
 
+    <br>
+    <br>
+
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <img src="assets/Images/buffon_profile.jpg" alt="profile" class="img3">
+                </div>
+                <div class="col-8 article">
+                    <h1>About Me</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta obcaecati nisi laudantium exercitationem unde reprehenderit, porro quae nesciunt culpa sed ullam molestias iure repudiandae illum tenetur repellendus in non beatae.
+                    Accusantium commodi facere repudiandae cupiditate adipisci. Adipisci exercitationem quis mollitia, accusamus reprehenderit deleniti sint recusandae iusto voluptate maxime deserunt pariatur! Tempora id perferendis ipsam incidunt deleniti, itaque cumque quod dignissimos.
+                    Saepe adipisci, blanditiis rerum, optio harum dignissimos illo, quasi omnis alias sint similique. Voluptatem, ea veniam provident tempora fugit atque dolore magnam quas. Praesentium dolor ut quidem quibusdam totam dignissimos.
+                    Nostrum, saepe! Odio eum cupiditate quas libero. Reprehenderit distinctio impedit ipsa quasi voluptas perferendis eligendi illum reiciendis, magnam laborum dolorem aperiam sunt id similique libero illo temporibus, eius veniam tempora.
+                    Est nemo odit culpa provident cum! Nihil atque quis, sequi odit, in commodi excepturi assumenda, maxime ab sunt laudantium adipisci praesentium dicta dolore rem nesciunt blanditiis itaque nobis ad quae.</p>
+                    <img src="assets/Images/buffon_ucl.jpg" alt="ucl" class="img4">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptate quisquam repellat enim quidem temporibus laudantium ipsam facere delectus ducimus ratione aspernatur dignissimos nobis, labore iste cum atque, amet sit!
+                    Rem expedita numquam assumenda distinctio quam id ipsum quisquam? Ratione rem pariatur fugiat at numquam molestias hic ipsam quibusdam ut? Voluptatem sequi alias exercitationem eveniet, totam error amet adipisci! Quam!</p>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <footer>
         <div class="container">
