--- a/contact-me-page-buffon.html
+++ b/contact-me-page-buffon.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me Page - Gianluigi Buffon</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Contact Me Page - Gianluigi Buffon</title>
     <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -49,20 +49,27 @@
                 <div class="col-4">
                     <img src="assets/Images/buffon_profile.jpg" alt="profile" class="img3">
                 </div>
-                <div class="col-8 article">
-                    <h1>About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta obcaecati nisi laudantium exercitationem unde reprehenderit, porro quae nesciunt culpa sed ullam molestias iure repudiandae illum tenetur repellendus in non beatae.
-                    Accusantium commodi facere repudiandae cupiditate adipisci. Adipisci exercitationem quis mollitia, accusamus reprehenderit deleniti sint recusandae iusto voluptate maxime deserunt pariatur! Tempora id perferendis ipsam incidunt deleniti, itaque cumque quod dignissimos.
-                    Saepe adipisci, blanditiis rerum, optio harum dignissimos illo, quasi omnis alias sint similique. Voluptatem, ea veniam provident tempora fugit atque dolore magnam quas. Praesentium dolor ut quidem quibusdam totam dignissimos.
-                    Nostrum, saepe! Odio eum cupiditate quas libero. Reprehenderit distinctio impedit ipsa quasi voluptas perferendis eligendi illum reiciendis, magnam laborum dolorem aperiam sunt id similique libero illo temporibus, eius veniam tempora.
-                    Est nemo odit culpa provident cum! Nihil atque quis, sequi odit, in commodi excepturi assumenda, maxime ab sunt laudantium adipisci praesentium dicta dolore rem nesciunt blanditiis itaque nobis ad quae.</p>
-                    <img src="assets/Images/buffon_ucl.jpg" alt="ucl" class="img4">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptate quisquam repellat enim quidem temporibus laudantium ipsam facere delectus ducimus ratione aspernatur dignissimos nobis, labore iste cum atque, amet sit!
-                    Rem expedita numquam assumenda distinctio quam id ipsum quisquam? Ratione rem pariatur fugiat at numquam molestias hic ipsam quibusdam ut? Voluptatem sequi alias exercitationem eveniet, totam error amet adipisci! Quam!</p>
+                <div class="col-1"></div>
+                <div class="col-7 article">
+                    <h2>Contact Me</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quia perspiciatis, recusandae omnis amet iusto saepe voluptatem? Vero earum iure illo dolore cumque molestias ducimus suscipit, reiciendis temporibus rem odit.
+                    Laboriosam, nemo! Explicabo, saepe ducimus accusamus voluptates doloremque hic fugiat optio magni voluptatibus ab dolor. Aperiam, corporis! Quia harum vero obcaecati hic eum officiis, dolorum, pariatur tempore molestiae officia velit!</p>
+                    <ul class="navbar-nav">
+                        <li>
+                            <a href="https://www.instagram.com/gianluigibuffon/?hl=en"><img src="assets/Images/insta.webp" alt="instagram" class="img8 nav-link"/></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/GianluigiBuffon"><img src="assets/Images/facebook.png" alt="facebook" class="img8 nav-link"/></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/gianluigibuffon?lang=en"><img src="assets/Images/twitter.png" alt="twitter" class="img8 nav-link"/></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </main>
+
 
     <footer>
         <div class="container">
