--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="/" class="col-10">
                 <img src="assets/Images/buffon logo.png" alt="Gianluigi Buffon">
             </a>
-            <a href="/" class="col-2">
+            <a href="contact-me-page-buffon.html" class="col-2">
                 Contact Me
             </a>
         </div>
@@ -145,7 +145,7 @@
                             <a href="about-me-buffon.html">About Me</a>
                         </li>
                         <li>
-                            <a href="/">Contact Me</a>
+                            <a href="contact-me-page-buffon.html">Contact Me</a>
                         </li>
                     </ul>
                 </div>
